fixed mobile menu animation bug where circle didn't align with hamburger

--- a/app/components/nav/_index.scss
+++ b/app/components/nav/_index.scss
@@ -24,15 +24,17 @@
 
 .nav__bg{
     position: absolute;
-    top: rem(24);
-    right: rem(20);
+    top: rem(28);
+    right: rem(22);
     z-index:-1;
-    width: 50px;
-    height: 50px;
+    width: rem(25);
+    height: rem(25);
     border-radius: 50%;
     transform: scale(1,1);
     transition: transform 1s, background 2s ease-out;
     @include bp($m){
+        width: rem(50);
+        height: rem(50);
         top: rem(44);
         right: rem(44);
     }
@@ -46,7 +48,7 @@
 
 .nav__list{
     text-align: center;
-    width: 400px;
+    width: rem(400);
     list-style: none;
     opacity: 0;
     transition: opacity 0.25s ease-in;
